--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -11,10 +11,12 @@
 \newcommand{\coloring}[1]{\(#1\)-coloring}
 \newcommand{\colorable}[1]{\(#1\)-colorable}
 \newcommand{\chromatic}[1]{\(#1\)-chromatic}
+\newcommand{\clique}[1]{\(#1\)-clique}
 \newcommand{\X}{\chi}
 \renewcommand{\d}{\delta}
 \newcommand{\D}{\Delta}
 \renewcommand{\l}{\lambda}
+\newcommand{\w}{\omega}
 \newcommand{\SG}{\mathscr{G}}
 \newcommand{\BO}{\mathcal{O}}
 \newtheorem{proposition}{Proposition}
