--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,74 +1,124 @@
 @book{suh,
-author={Suh, Nam P.},
-title={The Principles of Design},
-publisher={Oxford University Press},
-address={New York},
-year={1990}
+  author={Suh, Nam P.},
+  title={The Principles of Design},
+  publisher={Oxford University Press},
+  address={New York},
+  year={1990}
 }
 
 @article{suh2,
-author={Suh, Nam P.},
-title={Axiomatic design theory for systems},
-journal={Research in Engineering Design},
-volume={10},
-pages={189--209},
-year={1998}
+  author={Suh, Nam P.},
+  title={Axiomatic design theory for systems},
+  journal={Research in Engineering Design},
+  volume={10},
+  pages={189--209},
+  year={1998}
 }
 
 @inproceedings{jahanbekam,
-author={Behdad, Sara and Gopalakrishnan, Praveen Kumare and Jahanbekam, Sogol and Klein, Helen},
-title={Graph Partitioning Technique to Identify Physically Integrated Design Concepts},
-series={Proceedings of the ASME 2018 International Design Engineering Technical Conferences \& Computers and
-Information in Engineering Conference IDETC/CIE 2018"},
-month={Aug 26--29},
-address={Quebec, Canada},
-year={2018}
+  author={Behdad, Sara and Gopalakrishnan, Praveen Kumare and Jahanbekam, Sogol and Klein, Helen},
+  title={Graph Partitioning Technique to Identify Physically Integrated Design Concepts},
+  series={Proceedings of the ASME 2018 International Design Engineering Technical Conferences \& Computers and
+  Information in Engineering Conference IDETC/CIE 2018},
+  number={DETC2018-85646},
+  address={Quebec, Canada},
+  month={Aug 26--29},
+  year={2018}
 }
 
-@article{cavallaro,
+@inproceedings{cavallaro,
   author={Behdad, Sara and Cavallaro, Jeffery and Gopalakrishnan, Praveen Kumare and Jahanbekam, Sogol},
   title={A Graph Coloring Technique for Identifying the Minimum Number of Parts for Physical Integration in
   Product Design},
-  journal={Proceedings of the ASME 2019 International Design Engineering Technical Conferences \& Computers and
-  Information in Engineering Conference},
-  volume={},
-  year={2019},
-  number={DETC2018-98251}
+  series={Proceedings of the ASME 2019 International Design Engineering Technical Conferences \& Computers and
+  Information in Engineering Conference IDETC/CIE 2019},
+  number={DETC2019-98251},
+  address={Anaheim, CA},
+  month={Aug 18--21},
+  year={2019}
 }
 
 @book{chartrand,
-author={Chartrand, Gary and Zhang, Ping},
-title={A First Course in Graph Theory},
-publisher={Dover Publications},
-address={Mineola, New York},
-year={2012}
+  author={Chartrand, Gary and Zhang, Ping},
+  title={A First Course in Graph Theory},
+  publisher={Dover Publications},
+  address={Mineola, New York},
+  year={2012}
 }
 
 @book{west,
-author={West, Douglas B.},
-title={Introduction to Graph Theory},
-edition={\(2^{nd}\)},
-publisher={Prentice Hall},
-address={Upper Saddle River, NJ},
-year={2001}
+  author={West, Douglas B.},
+  title={Introduction to Graph Theory},
+  edition={\(2^{nd}\)},
+  publisher={Prentice Hall},
+  address={Upper Saddle River, NJ},
+  year={2001}
 }
 
 @article{hopcroft,
- author = {Hopcroft, John and Tarjan, Robert},
- title = {Algorithm 447: Efficient Algorithms for Graph Manipulation},
- journal = {Commun. ACM},
- issue_date = {June 1973},
- volume = {16},
- number = {6},
- month = jun,
- year = {1973},
- issn = {0001-0782},
- pages = {372--378},
- numpages = {7},
- url = {http://doi.acm.org/10.1145/362248.362272},
- doi = {10.1145/362248.362272},
- acmid = {362272},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {analysis of algorithms, graph manipulation, graphs},
-} 
+  author={Hopcroft, John and Tarjan, Robert},
+  title={Algorithm 447: Efficient Algorithms for Graph Manipulation},
+  journal={Communications of the ACM},
+  publisher={Assocation for Computing Machinery (ACM)},
+  address={New York},
+  volume={16},
+  number={6},
+  month={June},
+  year={1973},
+  pages={372--378}
+}
+
+@book{zykov,
+  title={On Some Properties of Linear Complexes},
+  author={Zykov, A.A. and American Mathematical Society},
+  series={American Mathematical Society Translations Series One},
+  publisher={American Mathematical Society},
+  volume={7},
+  year={1952},
+  pages={418--449} 
+}
+
+@article{mcdiarmid,
+  author={McDiarmid, Colin},
+  title={Determining the Chromatic Number of a Graph},
+  journal={SIAM Journal on Computing},
+  volume={8},
+  number={1},
+  month={02},
+  year={1979},
+  pages={1-14}
+}
+
+@article{bron,
+  author={Bron, Coen and Kerbosch, Joep},
+  title={Algorithm 457: Finding All Cliques of an Undirected Graph},
+  journal={Communications of the ACM},
+  volume={16},
+  number={9},
+  publisher={Assocation for Computing Machinery (ACM)},
+  address={New York},
+  month={September},
+  year={1973},
+  pages={575--577}
+}
+
+@article{edwards,
+  author={Edwards, C.S. and Elphick, C.H.},
+  title={Lower Bounds for the Clique and the Chromatic Numbers of a Graph},
+  journal={Discrete Applied Mathematics},
+  publisher={North-Holland Publishing Company},
+  volume={5},
+  number={1},
+  year={1983},
+  pages={51--64}
+}
+
+@article{myers,
+  author={Myers, B.R. and Liu, R},
+  title={A Lower Bound on the Chromatic Number of a Graph},
+  journal={Networks},
+  volume={1},
+  publisher={John Wiley and Sons, Inc},
+  year={1972},
+  pages={273--277}
+}
