Working on zykov

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -13,6 +13,7 @@
 \newcommand{\chromatic}[1]{\(#1\)-chromatic}
 \newcommand{\clique}[1]{\(#1\)-clique}
 \newcommand{\X}{\chi}
+\renewcommand{\a}{\alpha}
 \renewcommand{\d}{\delta}
 \newcommand{\D}{\Delta}
 \renewcommand{\l}{\lambda}
@@ -40,7 +41,7 @@
 
 \include{design}
 \include{theory}
-\include{traditional}
+\include{exhaustive}
 \include{algorithm}
 \include{example}
 \include{casestudy}
