--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -78,6 +78,17 @@
   pages={418--449} 
 }
 
+@article{corneil,
+  author={Corneil, D.G. and Graham, B.},
+  title={An Algorithm for Determining the Chromatic Number of a Graph},
+  journal={SIAM Journal on Computing},
+  volume={2},
+  number={4},
+  month={December},
+  year={1973},
+  pages={311--318}
+}
+
 @article{mcdiarmid,
   author={McDiarmid, Colin},
   title={Determining the Chromatic Number of a Graph},
@@ -121,4 +132,29 @@
   publisher={John Wiley and Sons, Inc},
   year={1972},
   pages={273--277}
+}
+
+@article{voloshin,
+  author={Voloshin, Vitaly},
+  title={A Tribute to A. A. and T. E. Zykovs on the Occasion of A. A. Zykov's 90th Birthday},
+  journal={Topics in Graph Theory},
+  editor={Tyshkevich, R.},
+  month={November},
+  year={2013}
+}
+
+@article{obit,
+  title={Alexander Zykov 1922-2013},
+  author={Voloshin, Vitaly},
+  month={January},
+  year={2014}
+}
+
+@article{read,
+  author={Read, Ronald C.},
+  title={An Introduction to Chromatic Polynomials},
+  journal={Journal of Combinatorial Theory},
+  volume={4},
+  year={1968},
+  pages={52--71}
 }
