Added cite for recursive equation

--- a/thesis/design.tex
+++ b/thesis/design.tex
@@ -338,7 +338,7 @@ realized by separate parts due to independence or other reason.  Note that how t
 the scope of this research.  Adjacent FRs are candidates for part consolidation.  The goal is to find the chromatic
 number of the resulting graph, which corresponds to the minimum number of parts.
 
-Unfortunately, finding the chromatic number of a graph is known to be an NP-hard problem.  Thus, an algorithm is
-proposed with improved runtime complexity that can be run on a computer in order to provide a designer with an
-answer in a reasonable amount of time.  Designs with different minimum part requirements can then be compared
-during the analytical process as part of the overall process of selecting the best design.
+Unfortunately, finding the chromatic number of a graph is known to be an NP-hard problem \cite{mcdiarmid}.  Thus,
+an algorithm is proposed with improved runtime complexity that can be run on a computer in order to provide a
+designer with an answer in a reasonable amount of time.  Designs with different minimum part requirements can then
+be compared during the analytical process as part of the overall process of selecting the best design.
