--- a/thesis/exhaustive.tex
+++ b/thesis/exhaustive.tex
@@ -1,6 +1,6 @@
 \section{Traditional Approaches}
 
-Determining the chromatic number of a graph is of a class of problems called \emph{NP-hard}.
+Determining the chromatic number of a graph is of a class of problems called \emph{NP-hard} \cite{mcdiarmid}.
 
 \subsection{Runtime Complexity}
 
